# test_swig

./: CMakeLists.txt  Makefile  Test_interface_dany.i  Test_interface_danyPYTHON_wrap.cxx  install_manifest.txt  proviamo.py  test_dany_code.h
Test_bb/: CMakeCache.txt  CMakeLists.txt  Makefile  Test_interface_dany_bbPYTHON_wrap.cxx  main.py  pacman_bb_test.cpp  pacman_bb_test.h
Test_ok/: CMakeCache.txt  Exampletest_dany.py  ReadMe.txt  cmake_install.cmake  environment.py  test_dany_code.cpp
test_eigen/: CMakeCache.txt  CMakeLists.txt  Makefile  __init__.py  cmake_install.cmake  example_wrapper.cpp  interface.i   wrapper_example.h  wrapper_example.py
